# salome_cfd_extensions

./: .gitignore  INSTALL.md  Makefile.am  README.md  configure.ac
build-aux/: list_salome_modules.py
cfd_study/: Makefile.am
cfd_study/doc/: Makefile.am
cfd_study/env/: cfd_study.py.in  cfd_study.sh.in
cfd_study/idl/: CFDSTUDY_Gen.idl  Makefile.am
cfd_study/resources/: Makefile.am
cfd_study/src/: Makefile.am
cfd_study/src/CFDSTUDY/: CFDSTUDY.py  Makefile.am
cfd_study/src/CFDSTUDYGUI/: CFDSTUDYGUI.py  CFDSTUDYGUI_ActionsHandler.py  CFDSTUDYGUI_Agents.py  CFDSTUDYGUI_CommandMgr.py  CFDSTUDYGUI_Commons.py  CFDSTUDYGUI_DataModel.py  CFDSTUDYGUI_DesktopMgr.py  CFDSTUDYGUI_DialogCollector.py  CFDSTUDYGUI_Management.py  CFDSTUDYGUI_SolverGUI.py  CFDSTUDY_msg_en.ts  CFDSTUDY_msg_fr.ts  Makefile.am
cfd_study/src/CFDSTUDYOTURNS/: CFDSTUDYOTURNS_DistantLauncher.py  CFDSTUDYOTURNS_LocalLauncher.py  CFDSTUDYOTURNS_StudyInterface.py  Makefile.am
config/: salome_module.mk
m4/: cs_omniorb.m4  cs_salome.m4
